# learn_rust

./: Cargo.toml  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  tempo-config.yaml  test_methods.http
src/: main.rs  users.csv
src/application/usecase/: tickets.rs
src/domain/: error.rs  mod.rs
src/domain/tickets/: mod.rs  repository.rs  ticket.rs  ticket_description.rs  ticket_error.rs  ticket_id.rs  ticket_status.rs  ticket_title.rs
src/infrastructure/repository/: mod.rs  sqlx_ticket_repository.rs
src/presentation/: app_error.rs  mod.rs
src/presentation/http/: mod.rs  ticket_handler.rs
