[package]
name = "learn_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
reqwest = { version = "0.13", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
trait-variant = "0.1.2"
hyper = "1.8"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
dotenv = "0.15.0"
opentelemetry-otlp = "0.31.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
anyhow = "1.0"

[dev-dependencies]
mockall = "0.14"
tokio-test = "0.4"